--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+plymouth-theme-netrunner-logo (0.8.4-0ubuntu3-1netrunner2) dryland-te; urgency=low
+
+  * Initial Dryland TE release
+
+ -- Frédéric Gaudet <fred@linuxmint.com>  Wed, 10 Oct 2012 15:00:44 +0200
+
 plymouth-theme-netrunner-logo (0.8.4-0ubuntu3-1netrunner1) enigma; urgency=low
 
   * Initial enigma release
