--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+plymouth-theme-netrunner-logo (0.8.4-0ubuntu3-1netrunner5) enigma-1306; urgency=low
+
+  * Shrink logo
+
+ -- Frédéric Gaudet <fred@linuxmint.com>  Fri, 17 May 2013 08:56:23 +0200
+
 plymouth-theme-netrunner-logo (0.8.4-0ubuntu3-1netrunner4) enigma-1306; urgency=low
 
   * New Enigma theme
