--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+plymouth-theme-netrunner-logo (0.8.4-0ubuntu3-1netrunner6) enigma-1306; urgency=low
+
+  * New version of the script from Clemens
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 03 Jun 2013 14:56:17 +0100
+
 plymouth-theme-netrunner-logo (0.8.4-0ubuntu3-1netrunner5) enigma-1306; urgency=low
 
   * Shrink logo
