--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+plymouth-theme-netrunner-logo (0.8.4-0ubuntu3-1netrunner9) saucy; urgency=low
+
+  * Bump version number for next Netrunner release
+  * Change distro name to saucy
+
+ -- Leszek Lesner <leszek@zevenos.com>  Tue, 15 Oct 2013 11:51:57 +0200
+
 plymouth-theme-netrunner-logo (0.8.4-0ubuntu3-1netrunner8) enigma-1306; urgency=low
 
   * Rebased script
